# siim-isic-melanoma-classification

./: .gitignore  README.md  pyproject.toml
experiment/ensemble_study/: ensemble2.py  ensemble3.py  ensemble4.py
experiment/ensemble_study2/: Untitled.ipynb  doit.sh  ensemble.py  ensemble2.py  ensemble4.py  ext_1.sh  first.sh  second.sh  second_a.sh
experiment/infer_en_b0_mlp_0/: push.sh
experiment/infer_en_b0_mlp_1/: push.sh  run.sh
experiment/infer_en_b1_mlp_1/: push.sh  run.sh
experiment/infer_en_b2_mlp_0/: push.sh  run.sh
experiment/infer_en_b2_mlp_1/: push.sh  run.sh
experiment/infer_en_b3_mlp_0/: push.sh
experiment/infer_en_b3_mlp_1/: push.sh  run.sh
experiment/infer_en_b4_mlp_0/: run.sh
experiment/infer_en_b4_mlp_1/: run.sh
experiment/infer_en_b5_mlp_0/: run.sh
experiment/infer_en_b5_mlp_1/: run.sh
experiment/infer_en_b6_mlp_0/: run.sh
experiment/infer_en_b6_mlp_1/: run.sh
experiment/infer_en_mlp_2019/: push.sh
experiment/train_en_b0_mlp/: push.sh
experiment/train_en_b0_mlp_1/: push.sh
experiment/train_en_b0_mlp_2/: push.sh
experiment/train_en_b1_mlp_0/: push.sh  run.sh
experiment/train_en_b1_mlp_1/: push.sh  run.sh
experiment/train_en_b2_mlp_0/: push.sh
experiment/train_en_b2_mlp_1/: push.sh  run.sh
experiment/train_en_b2_mlp_2/: push.sh  run.sh
experiment/train_en_b3_mlp_0/: push.sh
experiment/train_en_b3_mlp_1/: push.sh  run.sh
experiment/train_en_b4_mlp_0/: push.sh  run.sh
experiment/train_en_b4_mlp_1/: push.sh  run.sh
experiment/train_en_b5_mlp_0/: push.sh  run.sh
experiment/train_en_b5_mlp_1/: push.sh  run.sh
experiment/train_en_b6_mlp_0/: push.sh  run.sh
experiment/train_en_b6_mlp_1/: push.sh  run.sh
experiment/train_en_mlp_2019/: push.sh
experiment/train_xgboost_dct_0/: push.sh
experiment/train_xgboost_en_feature_0/: push.sh
experiment/train_xgboost_meta_0/: push.sh
experiment/validation_study/: calc_metric.py  mean_ensemble.py  minmax_ensemble.py  power_avg_ensemble.py  rank_ensemble.py
runner/: baseline_efficientnet.ipynb  baseline_efficientnet.py  create_input_csv.py  efficientnet_b0_mlp.py  infer_test_tta.py  infer_tta.py  train_efficientnet_b0_lowlevel_gbdt.py  train_efficientnet_b0_ml.py  train_efficientnet_b0_mlp.py  train_efficientnet_b1_mlp.py  train_efficientnet_b2_mlp.py  train_efficientnet_b3_mlp.py  train_efficientnet_b4_mlp.py  train_efficientnet_b5_mlp.py  train_efficientnet_b6_mlp.py  train_efficientnet_mlp.py  train_efficientnet_mlp_2019.py  train_xgboost_dct.py  train_xgboost_en_feature.py  train_xgboost_meta.py
script/: create_csv.py  create_model_index.py  dct_xgboost.py  setup_dataset.sh  setup_env.sh
src/siim_isic_melanoma_classification/: __init__.py  comm.py  config.py  dataset.py  datasource.py  io.py  lightning.py  logger.py  net.py  task.py  transforms.py  util.py
src/siim_isic_melanoma_classification/task/: __init__.py  common.py  infer_gbdt_tta.py  infer_tta.py  kfold_cv_tta.py  train_nth_fold.py  train_nth_fold_dct_gbdt.py  train_nth_fold_gbdt.py  train_nth_fold_meta_gbdt.py  train_split_val.py
