[tool.poetry]
name = "siim-isic-melanoma-classification"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torchtoolbox = "^0.1.4"
pytorch-lightning = "^0.8.5"
timm = "^0.1.30"
kaggle_timm_pretrained = "^0.3.0"
torch = "^1.5.1"
torchvision = "^0.6.1"
pandas = "^1.0.5"
scikit-learn = "^0.23.1"
imageio = "^2.9.0"
numpy = "^1.19.0"
wandb = "^0.9.3"
apex = {git = "https://github.com/NVIDIA/apex"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.1.1"
pppiv = "^0.1.2"
kkt = "^0.3.5"
jupyter = "^1.0.0"
jupytext = "^1.5.1"

[tool.kkt]
enable_git_tag = true

[tool.kkt.meta_data]
code_file = "runner/baseline_efficientnet.ipynb"
competition = "siim-isic-melanoma-classification"
competition_sources = ["siim-isic-melanoma-classification"]
dataset_sources = ["cdeotte/jpeg-melanoma-256x256", "cdeotte/jpeg-melanoma-384x384", "nroman/melanoma-hairs", "ar90ngas/timm-pretrained-efficientnet"]
enable_constraint = false
enable_gpu = true
enable_internet = true
is_private = true
kernel_type = "notebook"
slug = "siim-isic-melanoma-classification"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
